# Modular-Backend

./: .replit  main.py  pyproject.toml  replit.md  requirements.txt
semiconductor-search/: main.py  requirements.txt
semiconductor-search/api/: routes.py
semiconductor-search/config/: categories_config.py  settings.py
semiconductor-search/data/: products.csv
semiconductor-search/data/html/: atmega328p.html  esp32s3.html  stm32f103c8.html  stm32f407vg.html
semiconductor-search/database/: db_client.py
semiconductor-search/embeddings/: embedding_service.py
semiconductor-search/frontend/: app.py
semiconductor-search/ingestion/: csv_loader.py  html_loader.py  html_parser.py  spec_normalizer.py
semiconductor-search/search/: hybrid_search.py  structured_filter.py  vector_search.py
semiconductor-search/utils/: feature_builder.py  value_parser.py
semiconductor-search/vector_db/: service.py
